--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
                 <h3 class="titulo">BREAKING BAD</h3>
                 <p class="descricao">Ao saber que tem câncer, um professor passa a fabricar metanfetamina pelo futuro da
                     família, mudando o destino de todos.</p>
+
                 <div class="botoes">
+                    <button role="button" id="control-video" class="botao play" onclick="videoPause()">
+                        <i class="fa-solid fa-circle-stop"></i>
+                        Parar
+                    </button>
                     <button role="button" class="botao play" onclick="video()">
                         <i class="fa-solid fa-play"></i>
                         Assistir
