--- a/perfil.html
+++ b/perfil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <title>NETFLIX CLONE - Perfil</title>
+    <title>TOPFLIX - NETFLIX CLONE Perfil</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/perfil.css">
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
